<resources>
    <string name="app_name">Movie App</string>
    <string name="get_started">Get Started</string>
    <string name="watch_premium">Watch Premium Hundreds of TV Shows and Movie are Waiting for you right on the phone</string>
    <string name="choose_language">Choose Language</string>

    <string name="hello">Hello</string>
    <string name="search_movie">Search Movie</string>
    <string name="top_movie">Top Movie</string>
    <string name="see_all">See all</string>
    <string name="upcoming_movies">Upcoming Movies</string>

    <string name="watch_now">Watch now</string>
    <string name="buy_ticket">Buy Ticket</string>
    <string name="movie_summary">Summary</string>
    <string name="cast">Cast</string>

    <string name="name">Name</string>
    <string name="username">Usernam</string>
    <string name="film_name">Film Name</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="seats">Seats</string>
    <string name="price">Price</string>
    <string name="discount">Discount</string>

    <string name="back">Back</string>
    <string name="Continue">Continue</string>
</resources>